--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "eslint": "^9.19.0",
